test-easy-call-js: some refactor

--- a/src/app/peer-call/peer-call.component.html
+++ b/src/app/peer-call/peer-call.component.html
@@ -1,6 +1,6 @@
 <div class="video-call-component container-fluid" style="width: 1200px; margin:auto">
   <div id="content" style="display: flex; flex-direction: row; padding:5px; align-content: space-between; margin: 3px;">
-    <video width="200" height="200" id="localVideo" autoplay playsinline style="margin-right: 10px;"></video>
+    <video width="200" height="200" id="localVideo" [muted]="true" muted="muted" autoplay playsinline style="margin-right: 10px;"></video>
 
 
   </div>
